tests/cases/structs/ok/union-by-owned-payload-drop.ari
impl Drop for i64 {
  fn drop(self) -> void {
    return;
  }
}

enum PayloadKind {
  owned,
  empty,
}

struct Packet {
  kind: PayloadKind,
  payload: union by kind {
    owned => own i64,
    empty => i64,
  },
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn consume_active(packet: Packet) -> i64 {
  match packet.payload {
    owned(token) => {
      drop token;
      return 35;
    },
    empty(value) => {
      return value;
    },
  }
}

fn drop_whole(packet: Packet) -> i64 {
  drop packet;
  return 7;
}

fn main() -> i64 {
  let active = Packet {
    kind: owned,
    payload: owned(make_owned(11)),
  };
  let whole = Packet {
    kind: owned,
    payload: owned(make_owned(13)),
  };
  return consume_active(active) + drop_whole(whole);
}
